# SeedGeneratorForArtisan

./: .gitignore  CMakeLists.txt  README.md
data/in/: example.txt  job_functions.txt
include/: util.hpp
src/: main.cpp  util.cpp
